# owl-robot-arm

./: README.md
install/: local_setup.sh  setup.sh
install/my_robot_bringup/share/my_robot_bringup/: package.sh  package.xml
install/my_robot_description/share/my_robot_description/: package.sh
install/my_robot_gazebo/share/my_robot_gazebo/: local_setup.sh  package.sh  package.xml
install/my_robot_moveit_config/share/my_robot_moveit_config/: local_setup.sh  package.sh
install/my_robot_sdk/share/my_robot_sdk/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/my_robot_bringup/: CMakeLists.txt  package.xml
src/my_robot_description/: package.xml
src/my_robot_gazebo/: CMakeLists.txt
src/my_robot_moveit_config/: CMakeLists.txt  package.xml
src/my_robot_sdk/: setup.cfg  setup.py
src/rv5as_so-assy_model_asm_description-20260408T194610Z-3-001/rv5as_so-assy_model_asm_description/: package.xml  setup.py
src/rv5as_so-assy_model_asm_description-20260408T194610Z-3-001/rv5as_so-assy_model_asm_description/launch/: display.launch.py  gazebo.launch.py
src/rv5as_so-assy_model_asm_description-20260408T194610Z-3-001/rv5as_so-assy_model_asm_description/meshes/: RV5AS_J1_SHOULDER_MODEL_1.stl  RV5AS_J2_NO1ARM_MODEL_1.stl  RV5AS_J3_ELBOW_MODEL_1.stl  RV5AS_J5_WRIST_MODEL_1.stl  RV5AS_J6_INTERFACE_1.stl
src/rv5as_so-assy_model_asm_description-20260408T194610Z-3-001/rv5as_so-assy_model_asm_description/urdf/: materials.xacro  rv5as_so-assy_model_asm.gazebo  rv5as_so-assy_model_asm.ros2control.xml  (+1 more)
(+1 files in other folders)
